feat: Add npm package publishing configuration
- Add bin script for global installation support
- Configure package.json with proper exports and files
- Add .npmignore to exclude development files from package
- Support both npx execution and global installation

--- a/package.json
+++ b/package.json
@@ -1,9 +1,18 @@
 {
   "name": "gemini-grounding-mcp",
-  "version": "1.0.0",
-  "description": "MCP server for Gemini AI web search with grounding",
-  "type": "module",
-  "main": "src/index.ts",
+  "version": "0.0.1",
+  "description": "MCP server for Gemini AI web search with grounding, featuring AI-powered summaries and batch search capabilities",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
+  "exports": {
+    ".": {
+      "import": "./dist/index.js",
+      "types": "./dist/index.d.ts"
+    }
+  },
+  "bin": {
+    "gemini-grounding-mcp": "./bin/gemini-grounding-mcp.js"
+  },
   "scripts": {
     "start": "tsx src/index.ts",
     "dev": "tsx watch src/index.ts",
@@ -22,9 +31,26 @@
     "search",
     "grounding"
   ],
-  "author": "",
+  "author": "Yuki Yano",
   "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/yuki-yano/gemini-grounding-mcp.git"
+  },
+  "bugs": {
+    "url": "https://github.com/yuki-yano/gemini-grounding-mcp/issues"
+  },
+  "homepage": "https://github.com/yuki-yano/gemini-grounding-mcp#readme",
+  "files": [
+    "dist",
+    "bin",
+    "README.md",
+    "LICENSE"
+  ],
   "packageManager": "pnpm@10.12.4",
+  "engines": {
+    "node": ">=18.0.0"
+  },
   "dependencies": {
     "@google/generative-ai": "^0.24.1",
     "@mizchi/readability": "^0.6.8",
