chore: Add environment configuration for scraping
- Add SCRAPE_TIMEOUT and SCRAPE_RETRIES to .env.example
- Add .claude directory to .gitignore
- Update scraper to use environment variables for configuration

--- a/.env.example
+++ b/.env.example
@@ -7,6 +7,10 @@ CACHE_TTL=3600
 RATE_LIMIT_DELAY=100
 MAX_CONCURRENT_REQUESTS=10
 
+# Scraping settings (optional)
+SCRAPE_TIMEOUT=10000
+SCRAPE_RETRIES=3
+
 # Debug settings (optional)
 DEBUG=false
 LOG_LEVEL=info
