--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     }
   },
   "bin": {
-    "gemini-grounding-mcp": "./bin/gemini-grounding-mcp.js"
+    "gemini-grounding-mcp": "bin/gemini-grounding-mcp.js"
   },
   "scripts": {
     "start": "tsx src/index.ts",
@@ -36,7 +36,7 @@
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "https://github.com/yuki-yano/gemini-grounding-mcp.git"
+    "url": "git+https://github.com/yuki-yano/gemini-grounding-mcp.git"
   },
   "bugs": {
     "url": "https://github.com/yuki-yano/gemini-grounding-mcp/issues"
