feat: Add configurable content length settings
- Add EXCERPT_LENGTH and SUMMARY_LENGTH environment variables
- Default summary length increased from 3000 to 5000 characters
- Allow users to customize content processing lengths
- Update documentation with new configuration options

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-# Gemini API Key (required)
+# Gemini API Key (required if not using OAuth)
 GEMINI_API_KEY=your-api-key-here
 
 # Performance settings (optional)
@@ -10,6 +10,10 @@ MAX_CONCURRENT_REQUESTS=10
 # Scraping settings (optional)
 SCRAPE_TIMEOUT=10000
 SCRAPE_RETRIES=3
+
+# Content processing settings (optional)
+EXCERPT_LENGTH=1000
+SUMMARY_LENGTH=5000
 
 # Debug settings (optional)
 DEBUG=false
