fix: Remove node-fetch dependency and use native fetch API
- Replace node-fetch with Node.js native fetch API (available in Node 18+)
- Convert @mizchi/readability imports to dynamic imports to handle ESM modules in CJS
- Keep package as CommonJS to avoid corepack issues
- Update tsdown config to use cjs format

--- a/package.json
+++ b/package.json
@@ -57,8 +57,7 @@
     "@mizchi/readability": "^0.6.8",
     "@modelcontextprotocol/sdk": "^1.13.2",
     "dotenv": "^17.0.0",
-    "google-auth-library": "^10.1.0",
-    "node-fetch": "^3.3.2"
+    "google-auth-library": "^10.1.0"
   },
   "devDependencies": {
     "@biomejs/biome": "^2.0.6",
